# Fire-Risk-Notification-Telegram-Bot

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  fetch.py  main.py  notifier.py  pyproject.toml
.github/workflows/: docker-publish.yml
docker/: Dockerfile  docker-compose.yml
src/firemap/: __init__.py  config.py  fetch.py  logging_setup.py  main.py  notifier.py
