[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "firemap"
version = "0.1.0"
description = "Fetches the daily fire-risk map from civilprotection.gov.gr and sends it to Telegram"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
]

[project.scripts]
firemap = "firemap.main:main"

[tool.setuptools.packages.find]
where = ["src"]
